Few sections added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Website Clone</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header"></div>
+    <div class="header">
+        <nav>
+            <img src="/images/netflix-logo.jpg" alt="logo" class="logo">
+            <div class="nav-second">
+                <div class="nav-lang-b">
+                    <i class="fa-solid fa-globe"></i>
+                    <select name="language" id="language">
+                        <option value="english">English</option>
+                        <option value="hindi">हिन्दी</option>
+                    </select>
+                </div>
+                <!-- <button class="lang">English</button> -->
+                <button class="signin">Sign In</button>
+            </div>
+        </nav>
+        <div class="hero">
+                <h1>Unlimited movies, TV shows and more</h1>
+                <p>Watch anywhere. Cancel anytime.</p>
+                <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
+                <div class="hero-email">
+                    <input type="email" placeholder="  Email Address">
+                    <button>Get Started  ></button>
+                </div>
+        </div>
+    </div>
+    <div class="section">
+        <div class="section-1">
+            <div class="into-1">
+                <h2>Enjoy on your TV</h2>
+                <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+            </div>
+            <div class="video-1">
+                <img src="/images/img-1.jpg" alt="Tv-img">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
